# genall

./: .gitignore  Dockerfile  action.yaml  pyproject.toml
.github/workflows/: checks.yaml  publish-test.yaml  publish.yaml
genall/: .genall.yaml  __init__.py  codegen.py  genall.py  main.py  parsing.py
genall/filters/: .genall.yaml  file_filter.py
